example of registering for events

--- a/include/unifex/config.hpp.in
+++ b/include/unifex/config.hpp.in
@@ -28,6 +28,10 @@
 #define UNIFEX_VERSION_MAJOR @libunifex_VERSION_MAJOR@
 #define UNIFEX_VERSION_MINOR @libunifex_VERSION_MINOR@
 
+#cmakedefine01 UNIFEX_NO_RANGES
+#cmakedefine UNIFEX_RANGES_INCLUDE_DIRS @UNIFEX_RANGES_INCLUDE_DIRS@
+#cmakedefine UNIFEX_RANGES_NAMESPACE @UNIFEX_RANGES_NAMESPACE@
+
 #cmakedefine01 UNIFEX_NO_MEMORY_RESOURCE
 #cmakedefine UNIFEX_MEMORY_RESOURCE_HEADER <@UNIFEX_MEMORY_RESOURCE_HEADER@>
 #cmakedefine UNIFEX_MEMORY_RESOURCE_NAMESPACE @UNIFEX_MEMORY_RESOURCE_NAMESPACE@
